--- a/en_US/elixir/Installation_authorization.qmd
+++ b/en_US/elixir/Installation_authorization.qmd
@@ -8,7 +8,7 @@ If you are new to the FLUX:: Immersive ecosystem, the first installation of FLUX
 4. Download and installation
 
 ## Create and account
-![](include/StoreLogin.png ':class=img-title')
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/elixir/StoreLogin.png ':class=img-title')
 [Create an account](https://shop.flux.audio/en_US/login "")
 
 
@@ -18,7 +18,7 @@ Unless you purchased your license in the flux.audio online store, you will need 
 
 FLUX:: uses the iLok license management system to deliver software licenses to users. If you have received an activation code (such as from a dealer purchase),you can use the Redeem License Code window to activate your license.
 
-![](include/Redeem.png ':class=img-title')
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/elixir/Redeem.png ':class=img-title')
 
 Visit our [License Code Activation page](https://shop.flux.audio/en_US/account/licence_code_redeem "").
 
@@ -28,7 +28,7 @@ Visit our [License Code Activation page](https://shop.flux.audio/en_US/account/l
 
 To activate licenses:
 
-![](include/ilok_m_logo.png ':class=img-title')
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/elixir/ilok_m_logo.png ':class=img-title')
 
 - An iLok user account is required.
 - An iLok USB key is optional.
@@ -40,13 +40,13 @@ FLUX:: uses the iLok license management system to deliver software licenses to u
 ## iLok License Manager
 *If you have redeemed your software license or completed your purchase process, your license will automatically be delivered into your iLok account*
 
-![](include/Ilokpage.jpg ':class=img-title')
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/elixir/Ilokpage.jpg ':class=img-title')
 
 For new iLok users, the first step is to download and install the iLok license manager available on the home page of the iLok website. When your user account is successfully activated and the iLok license manager is correctly installed, you can start the license manager software and log in to your iLok user account.
 
 ## Transferring license
 
-![](include/IlokLicense.jpg ':class=img-title')
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/elixir/IlokLicense.jpg ':class=img-title')
 
 Pressing on the sign in button will allow you to connect to your account. After Logging in, you are now ready to transfer any licenses to a computer or to any iLok USB key if you happen to have one. The process of transferring a license is as simple as dragging the license from the Available tab to your Local Computer *(or iLok key)* on the left side.
 
@@ -68,7 +68,7 @@ On this page you will find a macOS, a Windows 64 bits, as well as legacy version
 
 ## Center Preferences
 
-![](include/FluxCenter_-021.jpg ':class=img-title')
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/Plugins/elixir/FluxCenter_-021.jpg ':class=img-title')
 
 When you open FLUX:: Center you will see a page that lists all FLUX:: products available for you to install. You will also find information about which version you have currently installed on your system and which new versions might be available for you to update to. You can select versions to install - or uninstall if necessary - using the pull down menus. If you would like to access more installer options such as your preferred plug-in format, please click on the gear icon to the top right of the header area.
 
@@ -79,4 +79,4 @@ When you open FLUX:: Center you will see a page that lists all FLUX:: products a
 
 This preference page will allow you to choose various installation options such as preferred plug-in formats for your system. Choosing your format and returning to the main page by pressing the OK button will show all your install options for software and plugins based on the desired formats chosen.
 
-If you would like to be closer to the most current development cycles of the software, you can enable the Beta Versions option. This will give you access to a special set of software installers from the pull down menus on the main FLUX:: Center page. Beta versions are the new builds that are still under development but may contain useful bug fixes and new features. If you find that a beta version is not stable enough for you, then you can always roll back to a stable release version at any time through the FLUX:: Center installers. Note that these versions starts with a "B" where official releases start with a "V"
+If you would like to be closer to the most current development cycles of the software, you can enable the Beta Versions option. This will give you access to a special set of software installers from the pull down menus on the main FLUX:: Center page. Beta versions are the new builds that are still under development but may contain useful bug fixes and new features. If you find that a beta version is not stable enough for you, then you can always roll back to a stable release version at any time through the FLUX:: Center installers. Note that these versions starts with a "B" where official releases start with a "V".
