--- a/en_US/studio-session-plugins/index.qmd
+++ b/en_US/studio-session-plugins/index.qmd
@@ -29,14 +29,14 @@ The **Studio Session Plugins** are installed as a single bundle that contains th
 
 User documentation is the same as the standard products. Please refer to:
 
-* [Bittersweet Pro](en_US/bittersweet-pro_doc/0_BitterSweet_Pro.md)
-* [Epure](en_US/epure_doc/0_Epure.md)
-* [Ircam Verb Session](en_US/ircam_verb-session_doc/0_Ircam_Verb_Session.md)
-* [Pure Compressor](en_US/pure-compressor_doc/0_Pure_Compressor.md)
-* [Pure Expander](en_US/pure-expander_doc/0_Pure_Expander.md)
-* [Pure Limiter](en_US/pure-limiter_doc/0_Pure_Limiter.md)
-* [Studio Session Analyzer](en_US/analyser_doc/00_Pure_Analyzer_00_Pure_Analyzer.md)
-* [Syrah](en_US/syrah_doc/0_Syrah.md)
+* [Bittersweet Pro](../bittersweet-pro/index.html)
+* [Epure](../epure/index.html)
+* [Ircam Verb Session](../ircam-verb-session/index.html)
+* [Pure Compressor](../pure-compressor/index.html)
+* [Pure Expander](../pure-expander/index.html)
+* [Pure Limiter](../pure-limiter/index.html)
+* [Studio Session Analyzer](../studio-session-analyser/index.html)
+* [Syrah](../syrah/index.html)
 
 Tutorials are as well available for **How to mix with Studio Session Pack**:
 
@@ -44,5 +44,3 @@ Tutorials are as well available for **How to mix with Studio Session Pack**:
 * [How to mix with Studio Session Pack - Dynamic treatment](https://youtu.be/q1HDL98Nzv8)
 * [How to mix with Studio Session Pack - Reverberation ](https://youtu.be/Izn3Le6Th5Q)
 * [How to mix with Studio Session Pack - Last stage of production](https://youtu.be/SHARm5sLtjw)
-
-----
