--- a/en_US/analyzer/Transfer_function_measurement_Introduction.qmd
+++ b/en_US/analyzer/Transfer_function_measurement_Introduction.qmd
@@ -4,11 +4,15 @@ The transfer function measures the way the system affects the magnitude and phas
 
 Practical uses of this are numerous: determining the curve of an equalizer, determining what frequencies are emphasized by an outboard device, measuring a room's acoustic response, etc.
 
-> The transfer function assumes the system meets the following conditions:
-> * linearity
-> * time-invariance
->
-> Linearity notably implies the system is free of distortion, and time-invariance that its characteristics do not change in time.
-> Failing to meet these requirements will lead to unpredictable results.
->
-> In practice, the transfer function is considered an adequate measurement technique for most real-world systems, except for devices exhibiting highly non-linear behaviour such as compressors and distortion effects, and time-modulation based effects such as chorus and flanger.
+:::{.callout-note}
+The transfer function assumes the system meets the following conditions:
+linearity
+
+time-invariance
+
+Linearity notably implies the system is free of distortion, and time-invariance that its characteristics do not change in time.
+
+Failing to meet these requirements will lead to unpredictable results.
+
+In practice, the transfer function is considered an adequate measurement technique for most real-world systems, except for devices exhibiting highly non-linear behaviour such as compressors and distortion effects, and time-modulation based effects such as chorus and flanger.
+:::
