--- a/en_US/spat-revolution/SPAT_Revolution_Heritage.qmd
+++ b/en_US/spat-revolution/SPAT_Revolution_Heritage.qmd
@@ -1,6 +1,6 @@
 ## SPAT Revolution's Heritage
 
-> **_SPAT Revolution_ is underpinned by 30 years of technical research and development in acoustics and sound.**
+**_SPAT Revolution_ is underpinned by 30 years of technical research and development in acoustics and sound.**
 
 Behind _SPAT Revolution_ is the partnership of FLUX:: SE and Ircam in Paris, France. 
 Founded in 1977, Ircam is one of the world’s leading public research institutes in the fields of musical expression, science of music, sound and acoustics. 
