--- a/en_US/spat-revolution/Third_Party_ProTools.qmd
+++ b/en_US/spat-revolution/Third_Party_ProTools.qmd
@@ -17,13 +17,13 @@ Being with local audio integration (LAP) or alternate audio routing methods in s
 
 Recent technical articles covers various aspects of Pro Tools integration.
 
-- **[Pro Tools integration to _SPAT Revolution_ (2022)]**(https://www.flux.audio/2022/10/17/pro-tools-integration-to-spat-revolution-2022/) is a good overview of the different possible integrations.
+- **[Pro Tools integration to _SPAT Revolution_ (2022)](https://www.flux.audio/2022/10/17/pro-tools-integration-to-spat-revolution-2022/)** is a good overview of the different possible integrations.
 
-- **[Using Pro Tools routing folders with _SPAT Revolution_]**(https://www.flux.audio/2022/10/13/using-pro-tools-routing-folders-with-spat-revolution/) introduces the concepts of using routing folders as _SPAT Revolution_ object tracks. (Requires Pro Tools 2020.03 and above)
+- **[Using Pro Tools routing folders with _SPAT Revolution_](https://www.flux.audio/2022/10/13/using-pro-tools-routing-folders-with-spat-revolution/)** introduces the concepts of using routing folders as _SPAT Revolution_ object tracks. (Requires Pro Tools 2020.03 and above)
 
-- **[Pro Tools 2022.9 AUX I/O routing with _SPAT Revolution_]**(https://www.flux.audio/2022/10/14/pro-tools-2022-9-aux-i-o-routing-with-spat-revolution/) covers the Pro Tools newly AUX I/O & Bridge device feature (macOS) and how this can be used to route to/from SPAT Revolution the SPAT Object track and the various renders.
+- **[Pro Tools 2022.9 AUX I/O routing with _SPAT Revolution_](https://www.flux.audio/2022/10/14/pro-tools-2022-9-aux-i-o-routing-with-spat-revolution/)** covers the Pro Tools newly AUX I/O & Bridge device feature (macOS) and how this can be used to route to/from SPAT Revolution the SPAT Object track and the various renders.
 
-- **[Reporting latency for delay compensation in _SPAT Revolution_]**(https://www.flux.audio/2022/10/17/reporting-latency-for-delay-compensation-in-spat-revolution/) covers the subject of reporting track latency when using Local Audio Path in order for SPAT Revolution to habdle delay compensation.
+- **[Reporting latency for delay compensation in _SPAT Revolution_](https://www.flux.audio/2022/10/17/reporting-latency-for-delay-compensation-in-spat-revolution/)** covers the subject of reporting track latency when using Local Audio Path in order for SPAT Revolution to habdle delay compensation.
 
 
 ## Templates
@@ -77,7 +77,7 @@ In ProTools, go to *Setup/Playback Engine* then set H/W Buffer Size to 1024 samp
 We highly recommend de-activating dynamic Plug-in processing.
 :::
 
-![image](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsEnginePlaybackMenu.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsEnginePlaybackMenu.png)
 
 In SPAT, go to *Preferences/Hardware IO* , then set:
 
@@ -86,7 +86,7 @@ In SPAT, go to *Preferences/Hardware IO* , then set:
 * External Sampling Rate: Enabled
 * Block Size: 1024
 
-![_SPAT Revolution_ Preferences](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsSpatPreferences.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsSpatPreferences.png)
 
 ### The SPATSync (aka dummy bus) and why
 
@@ -115,15 +115,15 @@ Pro Tools Advance Multi-format template for _SPAT Revolution_ reflects this.
 To automate variable parameters in the SPAT rendering engine from Pro Tools automation lanes, it is necessary to activate the parameters for each plug-in instance first.
 This is already done in the above templates and track presets.
 
-![automation_spatPl](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsEmptyAutomationEnable.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsEmptyAutomationEnable.png)
 
-![automation_spatPl](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsAutomationEnable.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsAutomationEnable.png)
 
 To do this one by one can be a laborious task.
 Save time by editing the Pro Tools preference for automation and enabling the '*Plug-in Controls Default to Auto-Enabled* ' option.
 When inserting a plug-in, all its parameters will then be available for automation automatically.
 
-![automation_option](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsPreferencesAutomation.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/ProToolsPreferencesAutomation.png)
 
 
 ### Source/Object Index, moving from LAP to OSC
