--- a/en_US/spat-revolution/Third_Party_Ableton_Live_Tools_for_SPAT_Revolution.qmd
+++ b/en_US/spat-revolution/Third_Party_Ableton_Live_Tools_for_SPAT_Revolution.qmd
@@ -2,8 +2,6 @@
 
 ![Guide Cover](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ableton-live-tools-seul-2.png)
 
-*Written by [Arsene](https://www.flux.audio/contacts/arsene)*
-
 :::{.callout-note}
 This guide is also available as [YouTube Videos](https://youtube.com/playlist?list=PL_Dcg2GwhLHnavr0YtK6JC64rGrE2KLxo).
 :::
@@ -36,18 +34,19 @@ This guide works as a base and not an “end all be all”, any ideas on how to 
 
 ## Demo
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/l575MU3l5SI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+{{< video https://www.youtube.com/embed/l575MU3l5SI >}}
 
-direct link if not loading: [https://youtu.be/l575MU3l5SI](https://youtu.be/l575MU3l5SI)
+<!-- direct link if not loading: [https://youtu.be/l575MU3l5SI](https://youtu.be/l575MU3l5SI) -->
 
 ## Installation
 
 :::{.callout-note}
 If you already have a FLUX:: account as well as an iLok account and already have a SPAT Revolution License or Trial you can jump to the [next section of the guide](https://doc.flux.audio/#/en_US/spat_revolution_doc/Third_Party_Ableton_Live_Tools_for_SPAT_Revolution?id=tools).
 
-You can also follow this part with the dedicated video as well: [https://youtu.be/7govpoyIFeA](https://youtu.be/7govpoyIFeA)
-{{< video https://www.youtube.com/embed/7govpoyIFeA >}}
 :::
+
+You can also follow this part with the dedicated video as well:
+{{< video https://www.youtube.com/embed/7govpoyIFeA >}}
 
 - So we are going to first create our FLUX:: account [here](https://shop.flux.audio/en_US/register).
 
@@ -85,7 +84,7 @@ Once the SPAT Revolution and the Ableton Live Tools for SPAT Revolution have bee
 
 It is possible to go to the folder location by opening the **Finder** and use the shortcut: ```CMD + Shift + G``` and copy the previous address.
 
-![Go to Folder](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/go_to_folder)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/go_to_folder)
 
 :::{.callout-warning}
  Please do not change the location of this folder.
@@ -93,7 +92,7 @@ It is possible to go to the folder location by opening the **Finder** and use th
 
 To go faster later, you can add this folder to your Finder’s sidebar:
 
-![Sidebar Finder](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/sidebar_finder)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/sidebar_finder)
 
 #### Windows
 
@@ -110,7 +109,7 @@ For our Virtual Audio Driver, **BlackHole** from **Existential audio** is my pre
 You can also have all the different versions *(2ch/16ch/64ch)* installed at the same time and have a different use for them simultaneously.
 We will see later in the guide that there are many ways this can be very helpful and how to take advantage of that, So my advice is to install them all.
 
-**BlackHole virtual audio driver can be found here:** [https://existential.audio/blackhole](https://existential.audio/blackhole)
+**[BlackHole virtual audio driver can be found here](https://existential.audio/blackhole)**
 
 :::{.callout-note}
 If you plan to have a dual computer setup, you don’t have to get BlackHole. More on that workflow later.*
@@ -118,11 +117,9 @@ If you plan to have a dual computer setup, you don’t have to get BlackHole. Mo
 
 ### Useful addition
 
-Software such as **Loopback** from **Rogue Amoeba** can be very useful to route audio between multiple devices/apps and can be a very good alternative to Aggregate and Multi-Output devices that you can already make inside the **Audio MIDI setup** of macOS.
+Software such as **[Loopback](https://rogueamoeba.com/loopback)** from **Rogue Amoeba** can be very useful to route audio between multiple devices/apps and can be a very good alternative to Aggregate and Multi-Output devices that you can already make inside the **Audio MIDI setup** of macOS.
 
-![Loopback](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/loopback.png)
-
-**Loopback:** [https://rogueamoeba.com/loopback](https://rogueamoeba.com/loopback)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/loopback.png)
 
 :::{.callout-warning}
  Don’t forget to restart your mac after installing all that.
@@ -141,7 +138,7 @@ What are Shortcuts?
 Shortcuts is simply an app *(native in macOS)* that lets you combine multiple steps across multiple apps to create powerful task automations.
 To add the provided Shortcuts, simply double click each of them and select the ```Add Shortcut``` button.
 
-![Shortcut Button](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/shortcut_button.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/shortcut_button.png)
 
 You will have 3 shortcuts available:
 
@@ -153,11 +150,11 @@ You will have 3 shortcuts available:
 
 These shortcuts are very simple to make using the Shortcuts app inside macOS if you want to modify them or make them yourself:
 
-![Shortcut Compo](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/shortcut_compo.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/shortcut_compo.png)
 
 Once added they should appear in your top bar for easy access:
 
-![Top Bar Shortcut](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/top_bar_shortcut.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/top_bar_shortcut.png)
 
 Of course, you do not have to do this at all, everything else should work properly anyway, this is simply to save you a bit of CPU.
 
@@ -171,64 +168,62 @@ So open Ableton Live and configure the following:
 
 - Make sure Live is scanning for VST2 plugins
 
-![VST](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/vst.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/vst.png)
 
 :::{.callout-warning}
- If you work with MIDI controller, we also highly recommend that you go into the Live Preferences, into the MIDI tab and change the Takeover Mode to Value Scaling so that parameters you play with don't get too jumpy. ![Value Scaling](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/value_scaling.png)
+ If you work with MIDI controller, we also highly recommend that you go into the Live Preferences, into the MIDI tab and change the Takeover Mode to Value Scaling so that parameters you play with don't get too jumpy.
+ 
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/value_scaling.png)
+
 :::
 
 - Set BlackHole as your Output Device and enable all the channels of the driver:
 
-![Live Output Setup](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ouput_setup3)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ouput_setup3)
 
 You can do this part when you need more channels, the only advantage of doing it now is that you don't have to do it later!
 
 
 - Add the SPAT folder containing the Tools using the ```add folder``` in the sidebar of Live:
 
-![Add Folder in Live](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/add_folder_in_live)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/add_folder_in_live)
 
 - Place on a track the devices SEND, ROOM and RETURN located in the SPAT Folder:
 
 The small windows poping up are the actual spat revolution plugins, on which the devices are based on. They are here to host to parameters of the Sources (SEND), Room/Reverb (ROOM), Master Gain (RETURN) and send the automation data to SPAT Revolution using the OSC protocol.
 
-![OSC check](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/osc_check)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/osc_check)
 
  verify that they are all set on the following:
 
->In IP: 127.0.0.1 (for all)
-
->In Port (SEND): 8101
-
->In Port (ROOM): 8102
-
->In Port (RETURN): 8103
-
->Out IP: 127.0.0.1 (for all)
-
->Out Port: 8100 (for all)
++ In IP: 127.0.0.1 (for all)
++ In Port (SEND): 8101
++ In Port (ROOM): 8102
++ In Port (RETURN): 8103
++ Out IP: 127.0.0.1 (for all)
++ Out Port: 8100 (for all)
 
 - **SEND:**
 
-![Send Check](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/send_check.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/send_check.png)
 
 - **ROOM:**
 
-![Room Check](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/room_check.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/room_check.png)
 
 - **RETURN:**
 
-![Return Check](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/return_check.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/return_check.png)
 
 ### SPAT Revolution
 
 - Open SPAT Revolution and go to the Preference panel to set BlackHole as the input device and your preferred Output device:
 
-![SPAT Input Output Setup](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/set_input_device)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/set_input_device)
 
 - Activate the OSC and set up the connection (find more about OSC configuration on the [OSC documentation section](Ecosystem_&_integration_OSC_Connections_Matrix.md):
 
-![SPAT OSC Setup](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/enable_OSC)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/enable_OSC)
 
 ### What is OSC?
 
@@ -252,7 +247,7 @@ You will need to set up the OSC connection between Ableton Live and SPAT Revolut
 
 Please check the setup part of the guide to learn more about the OSC Connection.
 
-![Send Device](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/send_description.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/send_description.png)
 
 1. **DEFAULT:** Reset the parameters of the source to the default settings.
 2. **Gain:** Configure the gain of the source.
@@ -309,7 +304,7 @@ You will need to set up the OSC connection between Ableton Live and SPAT Revolut
 
 Please check the setup part of the guide to learn more about the OSC Connection.
 
-![Room Device](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/room_description.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/room_description.png)
 
 1. **DEFAULT:** Reset the parameters of the Room to the default settings.
 2. **Gain:** Configure the gain of the room.
@@ -360,7 +355,7 @@ The default settings of the plugins should already be set to connect with the SP
 
 Please check the setup part of the guide to learn more about the OSC Connection.
 
-![Return Device](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/return_description.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/return_description.png)
 
 1. **Macro Variations:** Quick shortcuts to jump to specific values instead of using the encoder knob.
 2. **Gain:** Set the gain of the currently selected Master.
@@ -391,13 +386,13 @@ Usually in SPAT Revolution we currently cannot do undo/redo action, but in Live 
 *"Don’t forget to rename your tracks for an easier read of your session!"*
 :::
 
-![Room and Return Ordering](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/room_return_ordering.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/room_return_ordering.png)
 
 ### Automator
 
 The Automator device allows you to make the selected source move around in SPAT Revolution in a more organic and continuous way compared to traditional automation.
 
-![Automator Device](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/automartor_description.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/automartor_description.png)
 
 1. **Macro Variations:** Quick shortcuts to reset to the default parameters of the device, you can create new macros to quickly change the automation of a source.
 2. **Rate (Note):** The base rate of the automation (expressed in note values).
@@ -429,7 +424,7 @@ Moving this device to another track instead of deleting and creating a new one w
 ## Workflow
 
 :::{.callout-note}
-Watching the corresponding [video](https://youtu.be/YYcnobAmRFk) is highly recommended for this part.
+Watching the corresponding video is highly recommended for this part.
 
 {{< video https://www.youtube.com/embed/YYcnobAmRFk >}}
 :::
@@ -445,7 +440,7 @@ Now that we are completely setup, the formula is very simple:
 
 With both templates open, you will have a direct connection between Ableton Live's output and your physical output so that you can start making music without thinking about spatialization in the first place.
 
-![Basic Templates Setup](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/basic_templates_setup.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/basic_templates_setup.png)
 
 *Just make sure your "Cue Out" and "Master Out" are both set to 1/2, that your Output device in Live is "BlackHole 64ch" and that your Input device in SPAT Revolution is "BlackHole 64ch" as well, the device controlling the output Level of Live directly is placed on the Master Track in Live*
 
@@ -474,9 +469,7 @@ With both templates open, you will have a direct connection between Ableton Live
 
 - You can also start automating it using traditional automation or the "Automator" device in the same folder as the other devices.
 
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/xarMJBSSwU0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+{{< video https://www.youtube.com/embed/xarMJBSSwU0 >}}
 
 *direct link if not loading: https://youtu.be/xarMJBSSwU0*
 
@@ -486,14 +479,14 @@ Happy Immersive Creating!
 
 
 
-![spat screenshot](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/spat_screenshot_cover.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/spat_screenshot_cover.png)
 
 
 
 ## Printing an Immersive Mix
 
 :::{.callout-note}
-This part is also available as a YouTube Video here: [https://youtu.be/lOA86iQuxls](https://youtu.be/lOA86iQuxls)
+This part is also available as a YouTube Video
 
 {{< video https://www.youtube.com/embed/lOA86iQuxls >}}
 :::
@@ -508,10 +501,10 @@ Let's have a use case to demonstrate how you can print our mix.
 
 Here is a session which we are going to render for the Binaural *(3d on headphones)* Version and at the same time generate a Bed for an Atmos render later.
 
-![Ready to Print](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ready_to_render.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ready_to_render.png)
 
 We will start by creating an "Aggregate Device" in the "AUDIO MIDI SETUP" panel of macOS:
-![Aggregate](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/aggregate)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/aggregate)
 
 :::{.callout-warning}
  Both Ableton Live and SPAT Revolution need to be relaunched to detect the newly created Aggregate.
@@ -521,9 +514,9 @@ Then we will use this device as Output in SPAT Revolution and Input in Ableton L
 
 Then the only thing left to do is to create the tracks in Live that will receive the audio coming out of _SPAT Revolution_, routing them accordingly and press record and letting the thing play!
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FBz65vx_xJM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+{{< video https://www.youtube.com/embed/FBz65vx_xJM >}}
 
-*direct link if not loading: https://youtu.be/FBz65vx_xJM*
+<!-- *direct link if not loading: https://youtu.be/FBz65vx_xJM* -->
 
 ## From Single Machine to Dual Computer Setup
 
@@ -588,7 +581,7 @@ To Uninstall the Ableton Live Tools for SPAT Revolution simply go to this locati
 
 And delete the Ableton Live Devices Folder.
 
-### SPAT Revolution
+<!-- ### SPAT Revolution
 
 For more information about uninstalling SPAT Revolution please check out the following article inside the FLUX:: Knowledge Base.
 
@@ -598,9 +591,9 @@ How To uninstall software installed with FLUX:: Center:
 How to manually uninstall audio plugins:
 - https://www.flux.audio/knowledge-base/how-to-manually-uninstall-audio-plugins
 
+ -->
 
-
-## Thanks!
+<!-- ## Thanks!
 
 
 The Immersive Audio World is full of new possibilities and we hope that this guide helped you understand lots of what spatial audio has to offer and how to utilize it with Ableton Live!
@@ -608,7 +601,7 @@ The Immersive Audio World is full of new possibilities and we hope that this gui
 Let us know if there's anything missing from this guide (and the devices provided), ideas on how to better it, or simply what are you thoughts!
 
 You can contact me directly here:
-- FLUX:: https://www.flux.audio/contacts/arsene
+- FLUX:: https://www.flux.audio/contacts/arsene -->
 
 ## Credit
 
@@ -628,11 +621,11 @@ To the Ableton Team for making such an amazing DAW.
 
 ## Troubleshooting / Q&A
 
-### iLok Message
+<!-- ### iLok Message
 
 If you ever get that message when starting _SPAT Revolution_, first if you have activated your license from the iLok License Manager app, this error can still happens.
 
-![iLok Message](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ilokIssue.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ilokIssue.png)
 
 You can fix it by simply launching the SPAT Revolution again once or twice depending on your luck. This is an issue that still needs to be addressed by the FLUX:: Team.
 
@@ -642,7 +635,7 @@ If however this wasn't the solution please check the following:
 - is your license correctly activated in your iLok License Manager app?
 - is your iLok License Manager up to date? *(https://ilok.com)*
 
-If none of it solve the issue please contact the FLUX:: Tech Support here: support@flux.audio
+If none of it solve the issue please contact the FLUX:: Tech Support here: support@flux.audio -->
 
 ### Windows?
 
@@ -656,11 +649,11 @@ If a source in SPAT doesn't seem to receive the Automation parameters please che
 
 - is the OSC Output port and IP Output in the send plugin *(ref n°13 in the SEND description)* match the ip and port inside the OSC settings *(Preference panel in SPAT)*?
 
-![ip and port stuff](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ip_and_port_stuff.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/ip_and_port_stuff.png)
 
 - is OSC enabled *(Preference panel in SPAT)*
 
-![osc enabled](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/oscEnabled.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/oscEnabled.png)
 
 If you want to see if SPAT is correctly receiving the OSC messages you can activate the "Enable commands log" option which will now display every message received by SPAT in the Terminal. 
 
@@ -672,11 +665,11 @@ You can open the SPAT Terminal with the following shortcuts:
 
 >Popup Terminal = *cmd+F7*
 
-![terminal](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/terminal)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/terminal)
 
 - also make sure the OSC Index number in the SPAT plugin *(inside the send device)* match the number of the track inside SPAT Revolution
 
-![osc index ref](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/osc_index_ref.png)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/osc_index_ref.png)
 
 You can apply the same treatment to the ROOM and RETURN has well if the automations on those aren't working too.
 
@@ -689,7 +682,7 @@ If you work with moving setup you might sometimes get an error showing the OSC P
 
 If that doesn't do it you can also change the OSC Port to something else, and then set back the correct port number.
 
-![osc error](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/osc_in_error)
+![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/ThirdParty/Live_Tools/osc_in_error)
 
 ### SPAT Revolution Essential license?
 
@@ -704,7 +697,7 @@ Q: Is there demo sessions so I can have a quick look?
 A: Yes they are located in the same folder as the rest of the tools located here:
 ```/Library/Application Support/Flux/Ableton Live Devices/SPAT/demo sessions```
 
-## You want More?!
+<!-- ## You want More?!
 
 So you got completely hooked to Immersive Audio, while this guide will be updated we already have a lot more resources you can checkout right away!
 
@@ -743,4 +736,4 @@ Training & Workshops
 - https://www.flux.audio/training-and-workshops
 
 Facebook User Group
-- https://www.facebook.com/groups/fluximmersive.usergroup
+- https://www.facebook.com/groups/fluximmersive.usergroup -->
