--- a/en_US/spat-revolution/Spat_Environment_Input_Modules.qmd
+++ b/en_US/spat-revolution/Spat_Environment_Input_Modules.qmd
@@ -1,4 +1,4 @@
-## Inputs Module
+## Inputs Module {#sec-input-modules}
 
 ![](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Setup/InputModuleRow.png)
 
