--- a/en_US/spat-revolution/Spat_Environment_Input_Transcoder_Modules.qmd
+++ b/en_US/spat-revolution/Spat_Environment_Input_Transcoder_Modules.qmd
@@ -1,4 +1,4 @@
-# Input Transcoder
+# Input Transcoder {#sec-input-transcoder-module}
 
 _SPAT Revolution_ can handle many formats of multichannel audio throughout the signal flow, as we have been pointing out. As we approach the actual virtualisation of inputs into object-based audio sources in the SPAT _Virtual Rooms_ it may be necessary to change from the original input format to another. You use the Input Transcoder module and its parameters to do this.
 
