--- a/en_US/spat-revolution/Spat_Environment_Master_Section_Modules.qmd
+++ b/en_US/spat-revolution/Spat_Environment_Master_Section_Modules.qmd
@@ -13,7 +13,7 @@ Summing can also be done directly in **Master** and **Output** Modules, but summ
 :::
 
 The **Master Transcoder** row of modules offers an opportunity to consolidate the various formats you might have been mixing into one (or more) formats for final output routing by the **Output** modules.
-The same options and routing are available as in the [Input Transcoder modules](Spat_Environment_Input_Transcoder_Modules.md).
+The same options and routing are available as in the [Input Transcoder modules -@sec-input-transcoder-module].
 
 The **Master** bloc gives you a last gain staging control, as well as down mixing capabilities. When opening its matrix, it is possible to patch several inputs to one output, or, one input to several outputs.
 
