--- a/en_US/spat-revolution/Spat_Environment_Snapshot_Page.qmd
+++ b/en_US/spat-revolution/Spat_Environment_Snapshot_Page.qmd
@@ -1,4 +1,4 @@
-# Snapshots page
+# Snapshots page {#sec-snapshot}
 
 ![Snapshots page](https://media.githubusercontent.com/media/FLUX-SE/doc_images/main/SpatR/Snapshots/Page.png)
 
