--- a/en_US/fluxtemplate.tex
+++ b/en_US/fluxtemplate.tex
@@ -14,4 +14,5 @@
 
 \pagestyle{srcreprt}
 % use "pagestyle" also on chapter starting pages
+\renewcommand{\partpagestyle}{srcreprt}
 \renewcommand{\chapterpagestyle}{srcreprt}
